<resources>
    <string name="app_name">Navigate</string>
    <string name="button">Navigate</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_map">Map</string>
    <string name="dialog_share_text">Do you want to share?</string>
    <string name="share_button">Share</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="emailID">someone@gmail.com</string>
    <string name="usersName">Move and Track</string>
    <string name="comminicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="track">Track</string>
    <string name="navigate">Navigate</string>
    <string name="tools">Tools</string>
    <string name="gallery">Gallery</string>
    <string name="import_picture">Import</string>
    <string name="infoString">This is a Tracking application</string>
    <string name="doNotLogin">Enter without login</string>

    <!-- Yashika dev account -->
    <!--<string name="fb_ID">765575406885634</string>-->

    <!-- Amber dev account -->
    <string name="fb_ID">941333982612016</string>
</resources>
