<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camara"
            android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/import_picture"/>
        <item
            android:id="@+id/nav_gallery"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/gallery"/>

        <item
            android:id="@+id/nav_manage"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/tools"/>
    </group>

    <item android:title="@string/navigate">
        <menu>
            <item
                android:id="@+id/track"
                android:icon="@android:drawable/ic_dialog_map"
                android:title="@string/track"/>
        </menu>
    </item>

    <item android:title="@string/comminicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@android:drawable/ic_menu_share"
                android:title="@string/share"/>
            <item
                android:id="@+id/nav_send"
                android:icon="@android:drawable/ic_menu_send"
                android:title="@string/send"/>
        </menu>
    </item>

</menu>